Fix viewport being overflow on mobile

--- a/style.css
+++ b/style.css
@@ -74,14 +74,14 @@ body {
     margin-right: auto;
 }
 
-@media (min-width: 768) {
+@media (min-width: 701) {
     .content-body {
         margin-left: 220px;
         margin-right: auto;
     }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 700px) {
     .sidebar {
         transform: translateX(-100%);
         width: 100%;
